--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,76 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
+    margin:0;
+    padding:0;
 }
 
-<h1 {
+body{
+    /* position: relative; */
+    font-size: 20px;
+    background-color:peachpuff;
+    color: teal;
+    /* position: relative; */
+}
+
+header{
+    position: fixed;
+    background-color: darkcyan;
+    height: 100px;
+    width:100%;
+    line-height: 100px;
+
+}
+
+footer {
+    margin-top: 0;
+    bottom: 0;
+    border-bottom: 10px solid darkcyan;
+    height: 25px;
+    background-color: azure;
+    color: magenta;  
+    padding: 20px;
+  }
+
+li{
+    display: inline;
+    padding: 0px 10px;
+    text-decoration: none;
+
+}
+
+#spacer{
+    font-size: 100px;
+    /* padding: 100px; */
+    visibility: hidden;
+}
+
+figure{
+    padding-bottom: 50px;
+}
+
+img {
+    display: block;
+    margin: 20px auto;
+    border: 5px solid yellow;
+}
+
+h2{
     margin: auto;
 }
+
+form {
+    margin: 5px auto;
+    width: 500px;
+    padding: 10px;
+    border: 5px solid #DDAF94;
+    border-radius: 20px;
+  }
+
+.align-right {
+    text-align:right; 
+}
+.text-center {
+    text-align: center;
+}
+
+  
